style: fix for step in high contrast

--- a/src/components/sbb-slider/sbb-slider.scss
+++ b/src/components/sbb-slider/sbb-slider.scss
@@ -104,6 +104,7 @@
     var(--sbb-slider-line-color) var(--sbb-slider-step-gap),
     var(--sbb-slider-line-color) calc(var(--sbb-slider-step-fraction) * 100%)
   );
+  forced-color-adjust: none;
 }
 
 .sbb-slider__selected-line {
